# cap

./: README.md  overlay.html  package-lock.json  package.json  pnpm-lock.yaml  recording-toolbar.html  region-border.html  sessions-browser.html  vite.config.ts
src/: App.tsx  index.css  overlay.tsx  recording-toolbar.tsx  sessions-browser.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: capcap-doc.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
src-tauri/src/capture/: audio.rs  mod.rs  mouse.rs  permission.rs  screen.rs
src-tauri/src/export/: mod.rs  render.rs  zoom.rs
src-tauri/src/project/: mod.rs
src/components/editor/: EditorView.tsx  SessionSidebar.tsx  Timeline.tsx
src/components/export/: ExportPanel.tsx
src/components/overlay/: OverlayToolbar.tsx  RegionSelector.tsx
src/components/recording/: FloatingToolbar.tsx  PreviewCanvas.tsx  RecordingControls.tsx
src/components/subtitle/: SubtitleProperties.tsx
src/components/ui/: button.tsx  scroll-area.tsx  select.tsx  shortcuts-help.tsx  slider.tsx  tooltip.tsx
src/components/zoom/: ZoomSettings.tsx
src/hooks/: useGlobalShortcuts.ts  useKeyboard.ts  useThumbnails.ts
src/lib/: history.ts  ipc.ts  store.ts  video-url.ts  zoom.ts
